[package]
name = "mast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mast"
crate-type = ["cdylib"]

[dependencies]
approx = {version = "0.5.1", features = ["num-complex"]}
einsum-derive = {git="https://github.com/aristaeus/einsum-derive.git"}
ndarray = { version = "0.16.0", features = ["approx"] }
# ndarray = { version = "0.16.1", features = ["approx"] }
ndarray-linalg = {version="0.17.0", features=["openblas-system"]}
num = "0.4.3"
proptest = "1.5.0"
pyo3 = { version = "0.22.5", features=["num-complex"] }
rand = "0.8.5"
